--- a/action.yml
+++ b/action.yml
@@ -24,18 +24,13 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v2
-      with:
-        repository: RPMTW/Translation-Scripts
-        ref: main
-        path: ${{ github.action_path }}/Scripts
     # 安裝 Dart SDK
     - uses: dart-lang/setup-dart@v1
     # 安裝函式庫
     - run: |
-        dart pub get --directory=${{ github.action_path }}/Scripts
+        dart pub get --directory=${{ github.action_path }}
       shell: bash
-      # 開始執行腳本
-      name: Run scripts ( ${{ inputs.action }} Action )
-    - run: dart run ${{ github.action_path }}/Scripts/bin/main.dart --action ${{ inputs.action }},${{ inputs.args }} --gameVersion ${{ inputs.gameVersion }} --dirGameVersion ${{ inputs.dirGameVersion }}
+    # 開始執行腳本
+    - name: Run scripts ( ${{ inputs.action }} Action )
+      run: dart run ${{ github.action_path }}/bin/main.dart --action ${{ inputs.action }},${{ inputs.args }} --gameVersion ${{ inputs.gameVersion }} --dirGameVersion ${{ inputs.dirGameVersion }}
       shell: bash
