--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 name: "RPMTW Translation Scripts"
 description: "RPMTW 的 Minecraft 翻譯語系檔案腳本 for Github Action"
+icon: arrow-up-circle
 inputs:
   action:
     description: "要執行腳本的操作類型"
