--- a/action.yml
+++ b/action.yml
@@ -12,11 +12,8 @@ inputs:
   gameVersion:
     description: "遊戲版本"
     required: true
-    default: "1.17.1"
-  dirGameVersion:
-    description: "資料夾的遊戲版本名稱"
-    required: true
     default: "1.17"
+
 runs:
   using: "composite"
   steps:
@@ -28,5 +25,5 @@ runs:
       shell: bash
     # 開始執行腳本
     - name: Run scripts ( ${{ inputs.action }} Action )
-      run: dart run ${{ github.action_path }}/bin/main.dart --action ${{ inputs.action }},${{ inputs.args }} --gameVersion ${{ inputs.gameVersion }} --dirGameVersion ${{ inputs.dirGameVersion }}
+      run: dart run ${{ github.action_path }}/bin/main.dart --action ${{ inputs.action }},${{ inputs.args }} --gameVersion ${{ inputs.gameVersion }}
       shell: bash
